Move externalizer tester to wildfly-clustering-marshalling-api test-jar.